<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt_python_logic</name>
  <version>0.0.1</version>
  <description>Python logic (Action Server) for BehaviorTree example</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>bt_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
